Fix menu height on iOS

--- a/_scss/_menu-opened.scss
+++ b/_scss/_menu-opened.scss
@@ -2,7 +2,6 @@
   padding: 0;
   box-sizing: border-box;
   max-width: $content-max-width;
-  max-height: calc(100vh - 150px);
   margin: 0 auto;
   overflow: auto;
   -webkit-overflow-scrolling: touch;
